refactor, adds javadoc comments